added use cases for nosql

--- a/02_database_basics/02_database_basics.slides.html
+++ b/02_database_basics/02_database_basics.slides.html
@@ -14756,7 +14756,7 @@ I.e. when values are only accessed via keys</li>
 
 </div>
 </div>
-</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14765,6 +14765,19 @@ I.e. when values are only accessed via keys</li>
 <li>Walmart uses Neo4j to provide customers personalized, relevant product recommendations and promotions</li>
 <li>Medium uses Neo4j to build their social graph to enhance content personalization</li>
 <li>Cisco uses Neo4j to mine customer support cases to anticipate bugs</li>
+</ul>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Reasons-to-use-a-NoSQL-database">Reasons to use a NoSQL database<a class="anchor-link" href="#Reasons-to-use-a-NoSQL-database">&#182;</a></h2><ul>
+<li>The pace of development with NoSQL databases can be much faster than with a SQL database.</li>
+<li>The structure of many different forms of data is more easily handled and evolved with a NoSQL database.</li>
+<li>The amount of data in many applications cannot be served affordably by a SQL database.</li>
+<li>The scale of traffic and need for zero downtime cannot be handled by SQL.</li>
 </ul>
 
 </div>
