added the html file

--- a/03_continuous_integration/03_continuous_integration.slides.html
+++ b/03_continuous_integration/03_continuous_integration.slides.html
@@ -13377,6 +13377,58 @@ POST requests have no restrictions on data length</p>
 
 </div>
 </div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="GitHub-Apps-for-CI">GitHub Apps for CI<a class="anchor-link" href="#GitHub-Apps-for-CI">&#182;</a></h2><p>You can use different github apps for your code quality</p>
+<p>here we use Travis &amp; Codacy Production</p>
+<p>Travis CI: <a href="https://travis-ci.org/">https://travis-ci.org/</a></p>
+<p>Codacy: <a href="https://codacy.com">https://codacy.com</a></p>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Implementation-4:-Add-unit-testing">Implementation 4: Add unit testing<a class="anchor-link" href="#Implementation-4:-Add-unit-testing">&#182;</a></h2><p>Add different test scenarios for your functions to check if everything is alright</p>
+<p>Add this unittests in '/tests/' folder</p>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Implementation-5:-CI-apps">Implementation 5: CI apps<a class="anchor-link" href="#Implementation-5:-CI-apps">&#182;</a></h2><p>Log in to Travis and Codacy and connect them to your github account</p>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Implementation-6:-travis">Implementation 6: travis<a class="anchor-link" href="#Implementation-6:-travis">&#182;</a></h2><p>add this content to '.travis.yml' file</p>
+<p>'''yaml
+os:</p>
+<ul>
+<li>linux</li>
+</ul>
+<p>language: python</p>
+<p>python:</p>
+<ul>
+<li>"3.6"</li>
+<li>"3.7"</li>
+</ul>
+<p>script:</p>
+<ul>
+<li>pytest
+'''</li>
+</ul>
+
+</div>
+</div>
 </div></section></section>
 </div>
 </div>
